front end route settings

--- a/src/app/view-grades/view-grades.component.html
+++ b/src/app/view-grades/view-grades.component.html
@@ -1,7 +1,7 @@
 <app-header (headerClassChange)="toggleMainSec()"></app-header>
 <section class="transition3ms UP_mainCon" [ngClass]="{'open': mainToggle}">
 	<div class="UP_con">
-		<h2 class="text-left"><i class="fa fa-calendar headIcon"></i>Attendance</h2>
+		<h2 class="text-left"><i class="fa fa-calendar headIcon"></i>View Grades</h2>
 		<hr class="headSep">
 		<div class="row">
 			<div class="col-md-6"></div>
