--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,12 +16,18 @@
 </nav>
 <div class="UP_SideBar transition3ms" [ngClass]="{'active':sideBarBool}">
 	<div>
-		<ul class="list-unstyled sideBarUl">
+		<ul class="list-unstyled sideBarUl" *ngIf="!admin">
 			<li><a [routerLink]="['/dashboard']" class="transition3ms" [ngClass]="{'active': router.url == '/dashboard'}">Dashboard</a></li>
-			<li><a [routerLink]="['/fees']" class="transition3ms" [ngClass]="{'active': router.url == '/fees'}">Fees</a></li>
-			<li><a [routerLink]="['/attendance']" class="transition3ms" [ngClass]="{'active': router.url == '/attendance'}">Attendance</a></li>
-			<li><a [routerLink]="['/excersice']" class="transition3ms" [ngClass]="{'active': router.url == '/excersice'}">Excersice</a></li>
-			<li><a [routerLink]="['/profile']" class="transition3ms" [ngClass]="{'active': router.url == '/profile'}">Settings</a></li>
+			<li><a [routerLink]="['/movies']" class="transition3ms" [ngClass]="{'active': router.url == '/movies'}">Movies</a></li>
+			<li><a [routerLink]="['/favorites']" class="transition3ms" [ngClass]="{'active': router.url == '/favorites'}">Favorites</a></li>
+			<li><a [routerLink]="['/suggest-movie']" class="transition3ms" [ngClass]="{'active': router.url == '/suggest-movie'}">Suggest Movie</a></li>
+		</ul>
+		<ul class="list-unstyled sideBarUl" *ngIf="admin">
+			<li><a [routerLink]="['/admin']" class="transition3ms" [ngClass]="{'active': router.url == '/admin'}">Dashboard</a></li>
+			<li><a [routerLink]="['/add-categories']" class="transition3ms" [ngClass]="{'active': router.url == '/add-categories'}">Add Categories</a></li>
+			<li><a [routerLink]="['/add-movies']" class="transition3ms" [ngClass]="{'active': router.url == '/add-movies'}">Add Movies</a></li>
+			<li><a [routerLink]="['/suggested-movies']" class="transition3ms" [ngClass]="{'active': router.url == '/suggested-movies'}">Suggested Movies</a></li>
+			<li><a [routerLink]="['/view-grades']" class="transition3ms" [ngClass]="{'active': router.url == '/view-grades'}">View Grades</a></li>
 		</ul>
 	</div>
 </div>
