--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -1,7 +1,9 @@
 .mainLogCon{
 	background: rgb(241, 237, 237);
+	padding: 2em 0;
 	min-height: 100vh;
-	width: 100vw;
+	max-width: 100vw;
+	width: 100%;
 	display: flex;
 	display: -webkit-flex;
 	color: #000;
