--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,12 +4,12 @@
 		<div class="row">
 			<div class="form-group col-12">
 				<mat-form-field class="w-100">
-					<input matInput type="text" name="name" placeholder="Name">
+					<input matInput type="text" name="name" placeholder="Name" [(ngModel)]="model.name">
 				</mat-form-field>
 			</div>
 			<div class="form-group col-12">
 				<mat-form-field class="w-100">
-					<input matInput type="password" name="password" placeholder="Password">
+					<input matInput type="password" name="password" placeholder="Password" [(ngModel)]="model.pwd">
 				</mat-form-field>
 			</div>
 			<div class="form-group col-12 text-right">
