--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -4,37 +4,37 @@
 		<div class="row">
 			<div class="form-group col-6">
 				<mat-form-field class="w-100">
-					<input matInput type="text" name="firstName" placeholder="First Name" [(ngModel)]="user.firstName" required>
+					<input matInput type="text" name="firstName" placeholder="First Name" [(ngModel)]="signupObj.firstName" required>
 				</mat-form-field>
 			</div>
 			<div class="form-group col-6">
 				<mat-form-field class="w-100">
-					<input matInput type="text" name="lastName" placeholder="Last Name" [(ngModel)]="user.lastName" required>
+					<input matInput type="text" name="lastName" placeholder="Last Name" [(ngModel)]="signupObj.lastName" required>
 				</mat-form-field>
 			</div>
 			<div class="form-group col-12">
                 <mat-form-field class="w-100">
-                    <input matInput type="number" name="number"  placeholder="Phone Number" [(ngModel)]="user.mobileNumber">
+                    <input matInput type="number" name="number"  placeholder="Phone Number" [(ngModel)]="signupObj.mobileNumber">
                 </mat-form-field>
             </div>
 			<div class="form-group col-12">
 				<mat-form-field class="w-100">
-					<input matInput type="email" name="Email" placeholder="Email" [(ngModel)]="user.Email" required>
+					<input matInput type="email" name="Email" placeholder="Email" [(ngModel)]="signupObj.Email" required>
 				</mat-form-field>
 			</div>
 			<div class="form-group col-12">
 				<mat-form-field class="w-100">
-					<input matInput type="text" name="username" placeholder="Username" [(ngModel)]="user.username" required>
+					<input matInput type="text" name="username" placeholder="Username" [(ngModel)]="signupObj.username" required>
 				</mat-form-field>
 			</div>
 			<div class="form-group col-6">
 				<mat-form-field class="w-100">
-					<input matInput type="password" name="password" placeholder="Password" [(ngModel)]="user.password" required>
+					<input matInput type="password" name="password" placeholder="Password" [(ngModel)]="signupObj.password" required>
 				</mat-form-field>
 			</div>
 			<div class="form-group col-6">
 				<mat-form-field class="w-100">
-					<input matInput type="password" name="confirmPassword" placeholder="Confirm Password" [(ngModel)]="user.confirmPassword" required>
+					<input matInput type="password" name="confirmPassword" placeholder="Confirm Password" [(ngModel)]="signupObj.confirmPassword" required>
 				</mat-form-field>
 			</div>
 			<div class="row mx-0 w-100">
