--- a/src/app/user-dash/user-dash.component.html
+++ b/src/app/user-dash/user-dash.component.html
@@ -7,7 +7,20 @@
 			<div class="col-12">
 				<div class="card shadow form-group p-3">
 					<div class="d-block">
-					  <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"  [colors]="barColors" [legend]="barChartLegend" [chartType]="barChartType" ></canvas>
+						<!-- <canvas baseChart 
+						[datasets]="barChartData" 
+						[labels]="barChartLabels" 
+						[options]="barChartOptions" 
+						[colors]="barColors" 
+						[legend]="barChartLegend" 
+						[chartType]="barChartType" ></canvas> -->
+						<canvas baseChart
+						[datasets]="lineChartData"
+						[labels]="lineChartLabels"
+						[options]="lineChartOptions"
+						[colors]="lineChartColors"
+						[legend]="lineChartLegend"
+						[chartType]="lineChartType"></canvas>
 					</div>
 				</div>
 			</div>
