--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @font-face{ /* for IE */
-    font-family:Montserrat;
-    src:url('assets/fonts/Montserrat/Montserrat-Regular.ttf');
+	font-family:Montserrat;
+	src:url('assets/fonts/Montserrat/Montserrat-Regular.ttf');
 }
 @font-face {
 	font-family: "Montserrat";
@@ -226,5 +226,33 @@ button.mat-raised-button {
 }
 .headIcon{
 	margin-right: 0.75rem;
-    color: #3f51b5;
+	color: #3f51b5;
+}
+/* Movies Page CSS */
+.movieMainCon {
+	display: flex;
+	display: -webkit-flex;
+	padding: 0.75em;
+	border-bottom: 3px #3f51b5;
+	border-bottom-style: double;
+}
+.posterCon {
+	min-width: 150px;
+	width: 25%;
+	max-width: 250px;
+	max-height: 380px;
+	height: auto;
+	padding: 0.5em;
+}
+.posterCon img{width: 100%; height: 100%;}
+.MoviedataCon {
+	padding: 1em 0.5em;
+	width: 75%;
+}
+.MoviedataCon h2 {
+	font-weight: 600;
+}
+.MoviedataCon .cat {
+	color: rgb(167, 160, 160);
+	font-weight: 600;
 }
