--- a/src/app/admin-add-category/admin-add-category.component.html
+++ b/src/app/admin-add-category/admin-add-category.component.html
@@ -1,65 +1,97 @@
 <app-header (headerClassChange)="toggleMainSec()"></app-header>
 <section class="transition3ms UP_mainCon" [ngClass]="{'open': mainToggle}">
 	<div class="UP_con">
-		<h2 class="text-left"><i class="fa fa-cogs headIcon"></i>Add Categories</h2>
+		<h2 class="text-left"><i class="fa fa-cogs headIcon"></i>Add Categories and Time Period</h2>
 		<hr class="headSep">
-		<div class="card shadow py-3 my-4">
-			<div class="row mx-0">
-				<div class="col-md-6">
-					<mat-form-field class="w-100">
-						<input matInput type="name" name="name" placeholder="Name">
-					</mat-form-field>
+		<div class="row mx-0">
+			<div class="col-md-6">
+				<div class="card shadow py-3 my-4">
+					<div class="row mx-0">
+						<div class="col-12">
+							<div class="">
+								<mat-form-field class="w-100">
+									<input matInput type="name" name="name" placeholder="Category Name">
+								</mat-form-field>
+							</div>
+							<div class="text-center">
+								<button mat-raised-button color="primary" class="mt-2">Create Category</button>
+							</div>
+						</div>
+					</div>
 				</div>
-				<div class="col-md-6">
-					<mat-form-field class="w-100">
-						<input matInput type="name" name="fName" placeholder="Father's Name
-						">
-					</mat-form-field>
-				</div>
-				<div class="col-md-6">
-					<mat-form-field class="w-100">
-						<input matInput type="number" name="mobile" placeholder="Mobile Number
-						">
-					</mat-form-field>
-				</div>
-				<div class="col-md-6">
-					<mat-form-field class="w-100">
-						<input matInput type="address" name="address" placeholder="Address
-						">
-					</mat-form-field>
-				</div>
-				<div class="col-md-6">
-					<label for="profileImage" class="border-bottom py-1 w-100 pointer">
-						<a mat-flat-button color="primary">Choose File</a>
-					</label>
-					<input type="file" name="image" class="d-none" id="profileImage">
-				</div>
-				<div class="col-md-6 text-right">
-					<button mat-raised-button color="primary" class="mt-2">Update</button>
+			</div>
+			<div class="col-md-6">
+				<div class="card shadow py-3 my-4">
+					<div class="row mx-0">
+						<div class="col-12">
+							<div class="">
+								<mat-form-field class="w-100">
+									<input matInput type="name" name="name" placeholder="Time Period">
+								</mat-form-field>
+							</div>
+							<div class="text-center">
+								<button mat-raised-button color="primary" class="mt-2">Add Time Period</button>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-		<h2 class="text-left"><i class="fa fa-key headIcon"></i>Change Password</h2>
-		<hr class="headSep">
-		<div class="card shadow py-3 my-4">
-			<div class="row mx-0">
-				<div class="col-md-6">
-					<mat-form-field class="w-100">
-						<input matInput type="password" name="oldPassword" placeholder="Old Password">
-					</mat-form-field>
+		<div class="row mx-0">
+			<div class="col-md-6">
+				<div class="card shadow py-3 my-4">
+					<div class="row mx-0">
+						<div class="col-12">
+							<div class="table-responsive text-center">
+								<table class="table table-bordered">
+									<thead>
+										<tr>
+											<th>Category Name</th>
+											<th>Action</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td class="align-middle">Action</td>
+											<td class="align-middle">
+												<button mat-mini-fab color="warn">
+													<i class="fa fa-trash"></i>
+												</button>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
 				</div>
-				<div class="col-md-6">
-					<mat-form-field class="w-100">
-						<input matInput type="password" name="oldPassword" placeholder="New Password">
-					</mat-form-field>
-				</div>
-				<div class="col-md-6">
-					<mat-form-field class="w-100">
-						<input matInput type="password" name="oldPassword" placeholder="Confirm Password">
-					</mat-form-field>
-				</div>
-				<div class="col-md-6 text-right">
-					<button mat-raised-button color="primary" class="mt-2">Update Password</button>
+			</div>
+			<div class="col-md-6">
+				<div class="card shadow py-3 my-4">
+					<div class="row mx-0">
+						<div class="col-12">
+							<div class="table-responsive text-center">
+								<table class="table table-bordered">
+									<thead>
+										<tr>
+											<th>Time Period</th>
+											<th>Action</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td class="align-middle">2012-2013</td>
+											<td class="align-middle">
+												<button mat-mini-fab color="warn">
+													<i class="fa fa-trash"></i>
+												</button>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
