--- a/src/app/admin-add-movies/admin-add-movies.component.html
+++ b/src/app/admin-add-movies/admin-add-movies.component.html
@@ -5,61 +5,106 @@
 		<hr class="headSep">
 		<div class="card shadow py-3 my-4">
 			<div class="row mx-0">
-				<div class="col-md-6">
+				<div class="col-md-6 form-group">
 					<mat-form-field class="w-100">
-						<input matInput type="name" name="name" placeholder="Name">
+						<input matInput type="name" name="Title" placeholder="Movie Title">
 					</mat-form-field>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6 form-group">
 					<mat-form-field class="w-100">
-						<input matInput type="name" name="fName" placeholder="Father's Name
-						">
+						<input matInput type="number" name="Year" maxlength="4" placeholder="Year">
+						<mat-hint align="start">Please Enter the Releasing Year of the Movie</mat-hint>
 					</mat-form-field>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6 form-group">
 					<mat-form-field class="w-100">
-						<input matInput type="number" name="mobile" placeholder="Mobile Number
-						">
+						<input matInput type="text" name="director" placeholder="Director's Name">
 					</mat-form-field>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6 form-group">
 					<mat-form-field class="w-100">
-						<input matInput type="address" name="address" placeholder="Address
-						">
+						<mat-select placeholder="Category">
+							<mat-option value="0">Romantic</mat-option>
+							<mat-option  value="1">Comedy</mat-option>
+							<mat-option  value="2">Action</mat-option>
+						</mat-select>
 					</mat-form-field>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6 form-group">
+					<mat-form-field class="w-100">
+						<input matInput type="text" name="distribution" placeholder="Distibution">
+					</mat-form-field>
+				</div>
+				<div class="col-md-6 form-group">
 					<label for="profileImage" class="border-bottom py-1 w-100 pointer">
 						<a mat-flat-button color="primary">Choose File</a>
 					</label>
 					<input type="file" name="image" class="d-none" id="profileImage">
 				</div>
-				<div class="col-md-6 text-right">
+				<div class="col-md-6 form-group">
+					<mat-form-field class="w-100">
+						<textarea matInput type="text" name="Description" placeholder="Description"></textarea>
+					</mat-form-field>
+				</div>
+				<div class="col-md-6 form-group text-right">
 					<button mat-raised-button color="primary" class="mt-2">Update</button>
 				</div>
 			</div>
 		</div>
-		<h2 class="text-left"><i class="fa fa-key headIcon"></i>Change Password</h2>
-		<hr class="headSep">
 		<div class="card shadow py-3 my-4">
 			<div class="row mx-0">
-				<div class="col-md-6">
-					<mat-form-field class="w-100">
-						<input matInput type="password" name="oldPassword" placeholder="Old Password">
-					</mat-form-field>
-				</div>
-				<div class="col-md-6">
-					<mat-form-field class="w-100">
-						<input matInput type="password" name="oldPassword" placeholder="New Password">
-					</mat-form-field>
-				</div>
-				<div class="col-md-6">
-					<mat-form-field class="w-100">
-						<input matInput type="password" name="oldPassword" placeholder="Confirm Password">
-					</mat-form-field>
-				</div>
-				<div class="col-md-6 text-right">
-					<button mat-raised-button color="primary" class="mt-2">Update Password</button>
+				<div class="table-responsive text-center px-3">
+					<table class="table table-bordered">
+						<thead>
+							<tr>
+								<th>Title</th>
+								<th>Year</th>
+								<th>Director's Name</th>
+								<th>Category</th>
+								<th>Distribution</th>
+								<th>Movie's Poster</th>
+								<th>Action</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="align-middle">Venom</td>
+								<td class="align-middle">2018</td>
+								<td class="align-middle">Ruben Fleischer</td>
+								<td class="align-middle">Thriller</td>
+								<td class="align-middle">abc, xyz</td>
+								<td class="align-middle">
+									<img src="assets/images/venom.jpg" class="img-fluid" style="height: 120px;width: 100px;" alt="Movies Poster">
+								</td>
+								<td class="align-middle">
+									<button mat-mini-fab color="warn" class="mr-3">
+										<i class="fa fa-trash"></i>
+									</button>
+									<button mat-mini-fab color="primary">
+										<i class="fa fa-pencil"></i>
+									</button>
+								</td>
+							</tr>
+							<tr>
+								<td class="align-middle">Avengers Infinity War II</td>
+								<td class="align-middle">2019</td>
+								<td class="align-middle">Anthony Russo, Joe Russo</td>
+								<td class="align-middle">Fantasy</td>
+								<td class="align-middle">abc, xyz</td>
+								<td class="align-middle">
+									<img src="assets/images/avengers.jpg" class="img-fluid" style="height: 120px;width: 100px;" alt="Movies Poster">
+								</td>
+								<td class="align-middle">
+									<button mat-mini-fab color="warn" class="mr-3">
+										<i class="fa fa-trash"></i>
+									</button>
+									<button mat-mini-fab color="primary">
+										<i class="fa fa-pencil"></i>
+									</button>
+								</td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
 			</div>
 		</div>
