--- a/src/app/user-suggestions/user-suggestions.component.html
+++ b/src/app/user-suggestions/user-suggestions.component.html
@@ -3,48 +3,66 @@
 	<div class="UP_con">
 		<h2 class="text-left"><i class="fa fa-calendar headIcon"></i>User Suggestions</h2>
 		<hr class="headSep">
-		<div class="row">
-			<div class="col-md-6"></div>
-			<div class="col-md-6 text-right">
-				<mat-form-field>
-					<input matInput [matDatepicker]="yearFilter" placeholder="Select Date">
-					<mat-datepicker-toggle matSuffix [for]="yearFilter"></mat-datepicker-toggle>
-					<mat-datepicker #yearFilter></mat-datepicker>
-				</mat-form-field>
-			</div>
-		</div>
-		<div class="row">
+		<div class="row mx-0">
 			<div class="col-12">
-				<div class="table-responsive">
-					<table class="table text-center">
-						<thead>
-							<tr>
-								<th>Due Date</th>
-								<th>In Time</th>
-								<th>Out Time</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>12/09/2018</td>
-								<td>10:14:15 PM</td>
-								<td>12:00:15 PM</td>
-							</tr>
-							<tr>
-								<td>12/09/2018</td>
-								<td>10:14:15 PM</td>
-								<td>12:00:15 PM</td>
-							</tr>
-							<tr>
-								<td>12/09/2018</td>
-								<td>10:14:15 PM</td>
-								<td>12:00:15 PM</td>
-							</tr>
-						</tbody>
-					</table>
+				<div class="card shadow py-3 my-4">
+					<div class="row mx-0">
+						<div class="table-responsive text-center px-3">
+							<table class="table table-bordered">
+								<thead>
+									<tr>
+										<th>Title</th>
+										<th>Year</th>
+										<th>Director's Name</th>
+										<th>Category</th>
+										<th>Distribution</th>
+										<th>Description</th>
+										<th>Movie's Poster</th>
+										<th>Action</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="align-middle">Venom</td>
+										<td class="align-middle">2018</td>
+										<td class="align-middle">Ruben Fleischer</td>
+										<td class="align-middle">Thriller</td>
+										<td class="align-middle">abc, xyz</td>
+										<td class="align-middle">
+											<span class="descNowRap pointer" matTooltip="Journalist Eddie Brock is trying to take down Carlton Drake, the notorious and brilliant founder of the Life Foundation. While investigating one of Drake's experiments, Eddie's body merges with the alien Venom -- leaving him with superhuman strength and power. Twisted, dark and fueled by rage, Venom tries to control the new and dangerous abilities that Eddie finds so intoxicating.">Journalist Eddie Brock is trying to take down Carlton Drake, the notorious and brilliant founder of the Life Foundation. While investigating one of Drake's experiments, Eddie's body merges with the alien Venom -- leaving him with superhuman strength and power. Twisted, dark and fueled by rage, Venom tries to control the new and dangerous abilities that Eddie finds so intoxicating.</span>
+										</td>
+										<td class="align-middle">
+											<img src="assets/images/venom.jpg" class="img-fluid" style="height: 120px;width: 100px;" alt="Movies Poster">
+										</td>
+										<td class="align-middle">
+											<button mat-raised-button  class="mr-2 mb-2 bg-success text-white">Accept</button>
+											<button mat-raised-button color="warn" class="mb-2">Decline</button>
+										</td>
+									</tr>
+									<tr>
+										<td class="align-middle">Avengers Infinity War II</td>
+										<td class="align-middle">2019</td>
+										<td class="align-middle">Anthony Russo, Joe Russo</td>
+										<td class="align-middle">Fantasy</td>
+										<td class="align-middle">abc, xyz</td>
+										<td class="align-middle">
+											<span class="descNowRap pointer" matTooltip="Journalist Eddie Brock is trying to take down Carlton Drake, the notorious and brilliant founder of the Life Foundation. While investigating one of Drake's experiments, Eddie's body merges with the alien Venom -- leaving him with superhuman strength and power. Twisted, dark and fueled by rage, Venom tries to control the new and dangerous abilities that Eddie finds so intoxicating.">Journalist Eddie Brock is trying to take down Carlton Drake, the notorious and brilliant founder of the Life Foundation. While investigating one of Drake's experiments, Eddie's body merges with the alien Venom -- leaving him with superhuman strength and power. Twisted, dark and fueled by rage, Venom tries to control the new and dangerous abilities that Eddie finds so intoxicating.</span>
+										</td>
+										<td class="align-middle">
+											<img src="assets/images/avengers.jpg" class="img-fluid" style="height: 120px;width: 100px;" alt="Movies Poster">
+										</td>
+										<td class="align-middle text-center">
+											<button mat-raised-button  class="mr-2 mb-2 bg-success text-white">Accept</button>
+											<button mat-raised-button color="warn" class="mb-2">Decline</button>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
+		</div>	
 	</div>
 	<app-footer></app-footer>
 </section>
