--- a/src/app/admin-add-category/admin-add-category.component.html
+++ b/src/app/admin-add-category/admin-add-category.component.html
@@ -10,11 +10,11 @@
 						<div class="col-12">
 							<div class="">
 								<mat-form-field class="w-100">
-									<input matInput type="name" name="name" placeholder="Category Name">
+									<input matInput [(ngModel)]="categoryName" type="name" name="name" placeholder="Category Name">
 								</mat-form-field>
 							</div>
 							<div class="text-center">
-								<button mat-raised-button color="primary" class="mt-2">Create Category</button>
+								<button mat-raised-button  (click)="addCategory()" color="primary" class="mt-2">Create Category</button>
 							</div>
 						</div>
 					</div>
@@ -26,11 +26,11 @@
 						<div class="col-12">
 							<div class="">
 								<mat-form-field class="w-100">
-									<input matInput type="name" name="name" placeholder="Time Period">
+									<input matInput [(ngModel)]="timePeriod" type="name" name="name" placeholder="Time Period">
 								</mat-form-field>
 							</div>
 							<div class="text-center">
-								<button mat-raised-button color="primary" class="mt-2">Add Time Period</button>
+								<button mat-raised-button (click)="addTimePeriod()" color="primary" class="mt-2">Add Time Period</button>
 							</div>
 						</div>
 					</div>
