--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -4,27 +4,27 @@
 		<div class="row">
 			<div class="form-group col-6">
 				<mat-form-field class="w-100">
-					<input matInput type="text" name="firstName" placeholder="First Name" [(ngModel)]="signupObj.firstName" required>
+					<input matInput type="text" name="firstName" placeholder="First Name" [(ngModel)]="signupObj.first_name" required>
 				</mat-form-field>
 			</div>
 			<div class="form-group col-6">
 				<mat-form-field class="w-100">
-					<input matInput type="text" name="lastName" placeholder="Last Name" [(ngModel)]="signupObj.lastName" required>
+					<input matInput type="text" name="lastName" placeholder="Last Name" [(ngModel)]="signupObj.last_name" required>
 				</mat-form-field>
 			</div>
 			<div class="form-group col-12">
                 <mat-form-field class="w-100">
-                    <input matInput type="number" name="number"  placeholder="Phone Number" [(ngModel)]="signupObj.mobileNumber">
+                    <input matInput type="number" name="number"  placeholder="Phone Number" [(ngModel)]="signupObj.phone">
                 </mat-form-field>
             </div>
 			<div class="form-group col-12">
 				<mat-form-field class="w-100">
-					<input matInput type="email" name="Email" placeholder="Email" [(ngModel)]="signupObj.Email" required>
+					<input matInput type="email" name="Email" placeholder="Email" [(ngModel)]="signupObj.email" required>
 				</mat-form-field>
 			</div>
 			<div class="form-group col-12">
 				<mat-form-field class="w-100">
-					<input matInput type="text" name="username" placeholder="Username" [(ngModel)]="signupObj.username" required>
+					<input matInput type="number" name="Age" placeholder="Age" [(ngModel)]="signupObj.age" required>
 				</mat-form-field>
 			</div>
 			<div class="form-group col-6">
@@ -38,12 +38,14 @@
 				</mat-form-field>
 			</div>
 			<div class="row mx-0 w-100">
-				<div class="col-6 text-left">
-					<mat-radio-button value="1" color="primary" class="thRadio">Female</mat-radio-button>
-				</div>
-				<div class="col-6 text-left">
-					<mat-radio-button value="2" color="primary" class="thRadio">Male</mat-radio-button>
-				</div>
+				<mat-radio-group [(ngModel)]="signupObj.gender">
+					<div class="col-6 text-left">
+						<mat-radio-button value="1" color="primary" class="thRadio">Female</mat-radio-button>
+					</div>
+					<div class="col-6 text-left">
+						<mat-radio-button value="2" color="primary" class="thRadio">Male</mat-radio-button>
+					</div>
+				</mat-radio-group>	
 			</div>
 			<div class="form-group col-12">
 				<button mat-raised-button class="mt-2 thBtn w-100" color="primary" (click)="registerUser()">register</button>
