--- a/src/app/admin-add-movies/admin-add-movies.component.html
+++ b/src/app/admin-add-movies/admin-add-movies.component.html
@@ -66,39 +66,21 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr>
-								<td class="align-middle">Venom</td>
-								<td class="align-middle">2018</td>
-								<td class="align-middle">Ruben Fleischer</td>
-								<td class="align-middle">Thriller</td>
-								<td class="align-middle">abc, xyz</td>
+							<tr *ngFor="let mRow of allMovies">
+								<td class="align-middle">{{mRow.title}}</td>
+								<td class="align-middle">{{mRow.year}}</td>
+								<td class="align-middle">{{mRow.director}}</td>
+								<td class="align-middle">{{mRow.category.categoryName}}</td>
+								<td class="align-middle">{{mRow.distribution}}</td>
 								<td class="align-middle">
-									<img src="assets/images/venom.jpg" class="img-fluid" style="height: 120px;width: 100px;" alt="Movies Poster">
+									<img src="{{mRow.photoUrl}}" class="img-fluid" style="height: 120px;width: 100px;" alt="Movies Poster">
 								</td>
 								<td class="align-middle">
-									<button mat-mini-fab color="warn" class="mr-3">
-										<i class="fa fa-trash"></i>
-									</button>
-									<button mat-mini-fab color="primary">
+									<button mat-mini-fab class="mr-3" color="primary">
 										<i class="fa fa-pencil"></i>
 									</button>
-								</td>
-							</tr>
-							<tr>
-								<td class="align-middle">Avengers Infinity War II</td>
-								<td class="align-middle">2019</td>
-								<td class="align-middle">Anthony Russo, Joe Russo</td>
-								<td class="align-middle">Fantasy</td>
-								<td class="align-middle">abc, xyz</td>
-								<td class="align-middle">
-									<img src="assets/images/avengers.jpg" class="img-fluid" style="height: 120px;width: 100px;" alt="Movies Poster">
-								</td>
-								<td class="align-middle">
-									<button mat-mini-fab color="warn" class="mr-3">
+									<button mat-mini-fab color="warn" (click)="deleteMovieModal(mRow.id)">
 										<i class="fa fa-trash"></i>
-									</button>
-									<button mat-mini-fab color="primary">
-										<i class="fa fa-pencil"></i>
 									</button>
 								</td>
 							</tr>
@@ -108,6 +90,32 @@
 			</div>
 		</div>
 	</div>
+	<!-- Delete Category -->
+	<div class="modal fade" id="deleteMovie">
+		<div class="modal-dialog modal-sm">
+			<div class="modal-content">
+
+				<!-- Modal Header -->
+				<div class="modal-header">
+					<h4 class="modal-title">Delete Movie</h4>
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+
+				<!-- Modal body -->
+				<div class="modal-body">
+					<p>Are you sure, You want to delete this Movie?</p>
+				</div>
+
+				<!-- Modal footer -->
+				<div class="modal-footer">
+					<button type="button" class="btn shadow btn-primary" (click)="deleteMovie()">Confirm</button>
+					<button id="closeDeleteMovie" type="button" class="btn shadow btn-light" data-dismiss="modal">Close</button>
+				</div>
+
+			</div>
+		</div>
+	</div>
+	<button id="accessModalDeleteModal" class="d-none" data-toggle="modal" data-target="#deleteMovie"></button>
 	<app-footer></app-footer>
 </section>
 <div *ngIf="showLoader" style="position: fixed; z-index: 1003; left: 0; top: 0; bottom: 0; right: 0; background: #bfbfbf75; opacity: 1;">
