update movie api first half

--- a/src/app/admin-add-movies/admin-add-movies.component.html
+++ b/src/app/admin-add-movies/admin-add-movies.component.html
@@ -46,7 +46,7 @@
 					</mat-form-field>
 				</div>
 				<div class="col-md-6 form-group text-right">
-					<button mat-raised-button (click)="addMovies()" color="primary" class="mt-2">Update</button>
+					<button mat-raised-button (click)="addMovies()" color="primary" class="mt-2">Add Movie</button>
 				</div>
 			</div>
 		</div>
@@ -76,7 +76,7 @@
 									<img src="{{mRow.photoUrl}}" class="img-fluid" style="height: 120px;width: 100px;" alt="Movies Poster">
 								</td>
 								<td class="align-middle">
-									<button mat-mini-fab class="mr-3" color="primary">
+									<button mat-mini-fab class="mr-3" color="primary" (click)="updateMovieModal(mRow.id)">
 										<i class="fa fa-pencil"></i>
 									</button>
 									<button mat-mini-fab color="warn" (click)="deleteMovieModal(mRow.id)">
@@ -85,12 +85,17 @@
 								</td>
 							</tr>
 						</tbody>
+						<tfoot>
+							<tr>
+								<td colspan="7" *ngIf="allMovies.length <= 0">No Records Found</td>
+							</tr>
+						</tfoot>
 					</table>
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- Delete Category -->
+	<!-- Delete Movies -->
 	<div class="modal fade" id="deleteMovie">
 		<div class="modal-dialog modal-sm">
 			<div class="modal-content">
@@ -115,7 +120,73 @@
 			</div>
 		</div>
 	</div>
+	<!-- Update Movie -->
+	<div class="modal fade dropModal" id="UpdateMovie">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+
+				<!-- Modal Header -->
+				<div class="modal-header">
+					<h4 class="modal-title">Update Movie</h4>
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+				<!-- Modal body -->
+				<div class="modal-body">
+					<div class="col-12">
+						<div class="row">
+							<div class="col-md-6">
+								<mat-form-field>
+									<input matInput  [(ngModel)]="updateMovieData.title" type="text" name="" placeholder="Title">
+								</mat-form-field>
+							</div>
+							<div class="col-md-6">
+								<mat-form-field>
+									<input matInput [(ngModel)]="updateMovieData.year" type="text" name="" placeholder="Year" maxlength="4" OnlyNumber="true">
+									<mat-hint align="start">Please Enter the Releasing Year of the Movie</mat-hint>
+								</mat-form-field>
+							</div>
+							<div class="col-md-6">
+								<mat-form-field>
+									<input matInput [(ngModel)]="updateMovieData.director" type="text" name="" placeholder="Director's Name">
+								</mat-form-field>
+							</div>
+							<div class="col-md-6">
+								<mat-form-field>
+									<mat-select [(ngModel)]="updateMovieData.categoryId" placeholder="Category">
+										<mat-option *ngFor="let cRow of allCategories" [value]="cRow.id">{{cRow.categoryName}}</mat-option>
+									</mat-select>
+								</mat-form-field>
+							</div>
+							<div class="col-md-6">
+								<mat-form-field>
+									<input matInput [(ngModel)]="updateMovieData.distribution" type="text" name="" placeholder="Distribution">
+								</mat-form-field>
+							</div>
+							<div class="col-md-6">
+								<mat-form-field>
+									<input matInput type="text" [(ngModel)]="updateMovieData.photoUrl" placeholder="Photo Url">
+								</mat-form-field>
+							</div>
+							<div class="col-md-6">
+								<mat-form-field>
+									<textarea matInput [(ngModel)]="updateMovieData.description"  name="desc" placeholder="Description"></textarea> 
+								</mat-form-field>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Modal footer -->
+				<div class="modal-footer">
+					<button type="button" class="btn shadow btn-primary" (click)="updateMovie()">Update</button>
+					<button id="closeUpdateMovie" type="button" class="btn shadow btn-light" data-dismiss="modal">Close</button>
+				</div>
+
+			</div>
+		</div>
+	</div>
 	<button id="accessModalDeleteModal" class="d-none" data-toggle="modal" data-target="#deleteMovie"></button>
+	<button id="accessMovieUpdateModal" class="d-none" data-toggle="modal" data-target="#UpdateMovie"></button>
 	<app-footer></app-footer>
 </section>
 <div *ngIf="showLoader" style="position: fixed; z-index: 1003; left: 0; top: 0; bottom: 0; right: 0; background: #bfbfbf75; opacity: 1;">
