--- a/src/app/admin-add-movies/admin-add-movies.component.html
+++ b/src/app/admin-add-movies/admin-add-movies.component.html
@@ -34,11 +34,9 @@
 					</mat-form-field>
 				</div>
 				<div class="col-md-6 form-group">
-					<label for="profileImage" class="border-bottom py-1 w-100 pointer">
-						<a mat-flat-button color="primary">Choose File</a>
-						<span>{{labImg}}</span>
-					</label>
-					<input type="file" name="image" [(ngModel)]="labImg" (change)="saveImage($event)" class="d-none" id="profileImage" accept="image/x-png,image/gif,image/jpeg">
+					<mat-form-field class="w-100">
+						<input matInput [(ngModel)]="moviesObj.photoUrl" type="text" name="url" placeholder="Photo Url">
+					</mat-form-field>
 				</div>
 				<div class="col-md-6 form-group">
 					<mat-form-field class="w-100">
@@ -61,6 +59,7 @@
 								<th>Director's Name</th>
 								<th>Category</th>
 								<th>Distribution</th>
+								<th>Description</th>
 								<th>Movie's Poster</th>
 								<th>Action</th>
 							</tr>
@@ -73,10 +72,14 @@
 								<td class="align-middle">{{mRow.category.categoryName}}</td>
 								<td class="align-middle">{{mRow.distribution}}</td>
 								<td class="align-middle">
+									<span class="descNowRap pointer" matTooltip="{{mRow.description}}">{{mRow.description}}
+									</span>
+								</td>
+								<td class="align-middle">
 									<img src="{{mRow.photoUrl}}" class="img-fluid" style="height: 120px;width: 100px;" alt="Movies Poster">
 								</td>
 								<td class="align-middle">
-									<button mat-mini-fab class="mr-3" color="primary" (click)="updateMovieModal(mRow.id)">
+									<button mat-mini-fab class="mb-3" color="primary" (click)="updateMovieModal(mRow.id)">
 										<i class="fa fa-pencil"></i>
 									</button>
 									<button mat-mini-fab color="warn" (click)="deleteMovieModal(mRow.id)">
@@ -169,7 +172,7 @@
 							</div>
 							<div class="col-md-6">
 								<mat-form-field>
-									<textarea matInput [(ngModel)]="updateMovieData.description"  name="desc" placeholder="Description"></textarea> 
+									<textarea matInput [(ngModel)]="updateMovieData.description" rows="4"  name="desc" placeholder="Description"></textarea> 
 								</mat-form-field>
 							</div>
 						</div>
