--- a/src/app/suggest-movie/suggest-movie.component.html
+++ b/src/app/suggest-movie/suggest-movie.component.html
@@ -24,7 +24,7 @@
 				<div class="col-md-6 form-group">
 					<mat-form-field class="w-100">
 						<mat-select placeholder="Category" [(ngModel)]="suggestMovieObj.categoryId" >
-							<mat-option *ngFor = "let c of allCategories" value="0">{{c.categoryName}}</mat-option>
+							<mat-option *ngFor = "let c of allCategories" [value]="c.id">{{c.categoryName}}</mat-option>
 						</mat-select>
 					</mat-form-field>
 				</div>
@@ -45,7 +45,7 @@
 					</mat-form-field>
 				</div>
 				<div class="col-md-6 form-group text-right">
-					<button mat-raised-button color="primary" class="mt-2" (click)="getAllCategories()">Update</button>
+					<button mat-raised-button color="primary" class="mt-2">Suggest Movie</button>
 				</div>
 			</div>
 		</div>
