search movies api integration

--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -20,7 +20,7 @@
 						</mat-form-field>
 					</div>
 					<div class="col-md-1">
-						<button mat-mini-fab color="primary"><i class="fa fa-search"></i></button>
+						<button mat-mini-fab color="primary" (click)="searchMovies()"><i class="fa fa-search"></i></button>
 					</div>
 				</div>
 			</div>
