--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,6 +21,7 @@
 			<li><a [routerLink]="['/movies']" class="transition3ms" [ngClass]="{'active': router.url == '/movies'}">Movies</a></li>
 			<li><a [routerLink]="['/favorites']" class="transition3ms" [ngClass]="{'active': router.url == '/favorites'}">Favorites</a></li>
 			<li><a [routerLink]="['/suggest-movie']" class="transition3ms" [ngClass]="{'active': router.url == '/suggest-movie'}">Suggest Movie</a></li>
+			<li><a [routerLink]="['/profile']" class="transition3ms" [ngClass]="{'active': router.url == '/profile'}">Profile</a></li>
 		</ul>
 		<ul class="list-unstyled sideBarUl" *ngIf="admin">
 			<li><a [routerLink]="['/admin']" class="transition3ms" [ngClass]="{'active': router.url == '/admin'}">Dashboard</a></li>
